[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/abstract-entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/player-ship.gd" type="Script" id=2]
[ext_resource path="res://assets/spritesheets/ship.png" type="Texture" id=3]
[ext_resource path="res://assets/audio/laser1.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 7.07107

[sub_resource type="Animation" id=2]
resource_name = "death"
length = 1.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_spawn_explosion"
}, {
"args": [ 10.0 ],
"method": "_spawn_explosion"
} ]
}

[node name="body" instance=ExtResource( 1 )]
collision_mask = 12
script = ExtResource( 2 )
max_linear_vel = 200.0
shoot = true
muzzle_speed = 300.0

[node name="hitbox" parent="." index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="sprite" parent="." index="1"]
texture = ExtResource( 3 )
vframes = 2
hframes = 5
frame = 2

[node name="anim_timer" type="Timer" parent="." index="2"]
wait_time = 0.2
autostart = true

[node name="anim_player" type="AnimationPlayer" parent="." index="3"]
anims/death = SubResource( 2 )

[node name="fire_timer" type="Timer" parent="." index="4"]
wait_time = 0.3
autostart = true

[node name="muzzle_pos" type="Position2D" parent="." index="5"]
position = Vector2( 0, -16 )

[node name="shoot_sound" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource( 4 )
volume_db = -30.0

[node name="tween" type="Tween" parent="." index="7"]
[connection signal="timeout" from="anim_timer" to="." method="_on_anim_timer_timeout"]
[connection signal="animation_finished" from="anim_player" to="." method="_on_animation_finished"]
[connection signal="timeout" from="fire_timer" to="." method="_on_fire_timer_timeout"]
